Fixes over meter bug at small screen sizes. Left-aligns pagination at small screen sizes.

--- a/_sass/base/blocks/_results.scss
+++ b/_sass/base/blocks/_results.scss
@@ -161,10 +161,6 @@
 .results-main {
   background-color: $mid-gray;
   min-height: 900px; //TODO make this auto
-
-  // @include respond-to(medium-up) {
-  //   @include span-columns(13 of 16);
-  // }
 }
 
 .results-main-schools {
@@ -175,10 +171,11 @@
   }
 
   .school-meters {
+    overflow: hidden;
+
     figure.meter {
-      @include span-columns(5 of 15);
+      @include span-columns(4 of 12);
       @include omega(3n);
-      margin: 1px;
 
       figcaption {
         @include font-size(1);
@@ -254,6 +251,7 @@
   @include omega();
 
   @include respond-to(small-up) {
+    @include omega-reset(n);
     @include span-columns(6);
     @include omega(2n);
   }
