--- a/_sass/base/components/_pagination.scss
+++ b/_sass/base/components/_pagination.scss
@@ -1,10 +1,16 @@
 .pagination {
+  @include span-columns(12);
   margin-top: $base-padding;
-  text-align: right;
+  margin-left: $base-padding;
+
+  @include respond-to(small-up) {
+    text-align: right;
+    margin-left: 0;
+  }
 
   ol {
     display: block;
-    overflow: hidden;
+    //overflow: hidden;
     font-weight: $weight-bold;
     text-transform: uppercase;
 
